--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "symfony/framework-standard-edition",
-    "license": "MIT",
+    "name": "hikariichi/tsurami",
+    "license": "private",
     "type": "project",
-    "description": "The \"Symfony Standard Edition\" distribution",
+    "description": "tsurami.com",
     "autoload": {
         "psr-4": { "": "src/" },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
@@ -23,8 +23,9 @@
         "symfony/monolog-bundle": "^3.0.2",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.2.*",
-        "twig/twig": "^1.0||^2.0"
+        "symfony/symfony": "v3.3.0-RC1",
+        "twig/twig": "2.x-dev",
+        "snc/redis-bundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -62,8 +63,6 @@
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         },
-        "branch-alias": {
-            "dev-master": "3.2-dev"
-        }
+        "branch-alias": null
     }
 }
