ツラミが1件もない状態でトップページ開けない現象を修正、セッションの有効期限を長くする

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -26,6 +26,12 @@ framework:
   session:
     # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
     handler_id: snc_redis.session.handler
+    name: _session_id
+    cookie_lifetime: 126230400
+    cookie_domain:
+    cookie_secure: true
+    cookie_httponly: true
+
   fragments: ~
   http_method_override: true
   assets: ~
